// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`process > default.css 1`] = `
{
  "*,
::before,
::after": {
    "borderColor": "theme(\\"borderColor.DEFAULT\\", currentColor)",
    "borderStyle": "solid",
    "borderWidth": "0",
    "boxSizing": "border-box",
  },
  ":-moz-focusring": {
    "outline": "auto",
  },
  ":-moz-ui-invalid": {
    "boxShadow": "none",
  },
  "::-webkit-file-upload-button": {
    "WebkitAppearance": "button",
    "font": "inherit",
  },
  "::-webkit-inner-spin-button,
::-webkit-outer-spin-button": {
    "height": "auto",
  },
  "::-webkit-search-decoration": {
    "WebkitAppearance": "none",
  },
  "::before,
::after": {
    "--tw-content": "\\"\\"",
  },
  ":disabled": {
    "cursor": "default",
  },
  "[hidden]": {
    "display": "none",
  },
  "[type=\\"search\\"]": {
    "WebkitAppearance": "textfield",
    "outlineOffset": "-2px",
  },
  "a": {
    "color": "inherit",
    "textDecoration": "inherit",
  },
  "abbr:where([title])": {
    "textDecoration": "underline dotted",
  },
  "b,
strong": {
    "fontWeight": "bolder",
  },
  "blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre": {
    "margin": "0",
  },
  "body": {
    "lineHeight": "inherit",
    "margin": "0",
  },
  "button,
[role=\\"button\\"]": {
    "cursor": "pointer",
  },
  "button,
[type=\\"button\\"],
[type=\\"reset\\"],
[type=\\"submit\\"]": {
    "WebkitAppearance": "button",
    "backgroundColor": "transparent",
    "backgroundImage": "none",
  },
  "button,
input,
optgroup,
select,
textarea": {
    "color": "inherit",
    "fontFamily": "inherit",
    "fontFeatureSettings": "inherit",
    "fontSize": "100%",
    "fontVariationSettings": "inherit",
    "fontWeight": "inherit",
    "lineHeight": "inherit",
    "margin": "0",
    "padding": "0",
  },
  "button,
select": {
    "textTransform": "none",
  },
  "code,
kbd,
samp,
pre": {
    "fontFamily": "theme(
    \\"fontFamily.mono\\",
    ui-monospace,
    SFMono-Regular,
    Menlo,
    Monaco,
    Consolas,
    \\"Liberation Mono\\",
    \\"Courier New\\",
    monospace
  )",
    "fontSize": "1em",
  },
  "dialog": {
    "padding": "0",
  },
  "fieldset": {
    "margin": "0",
    "padding": "0",
  },
  "h1,
h2,
h3,
h4,
h5,
h6": {
    "fontSize": "inherit",
    "fontWeight": "inherit",
  },
  "hr": {
    "borderTopWidth": "1px",
    "color": "inherit",
    "height": "0",
  },
  "html": {
    "MozTabSize": "4",
    "WebkitTextSizeAdjust": "100%",
    "fontFamily": "theme(
    \\"fontFamily.sans\\",
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    \\"Segoe UI\\",
    Roboto,
    \\"Helvetica Neue\\",
    Arial,
    \\"Noto Sans\\",
    sans-serif,
    \\"Apple Color Emoji\\",
    \\"Segoe UI Emoji\\",
    \\"Segoe UI Symbol\\",
    \\"Noto Color Emoji\\"
  )",
    "fontFeatureSettings": "theme(\\"fontFamily.sans[1].fontFeatureSettings\\", normal)",
    "fontVariationSettings": "theme(\\"fontFamily.sans[1].fontVariationSettings\\", normal)",
    "lineHeight": 1.5,
    "tabSize": 4,
  },
  "img,
svg,
video,
canvas,
audio,
iframe,
embed,
object": {
    "display": "block",
    "verticalAlign": "middle",
  },
  "img,
video": {
    "height": "auto",
    "maxWidth": "100%",
  },
  "input::placeholder,
textarea::placeholder": {
    "color": "theme(\\"colors.gray.400\\", #9ca3af)",
    "opacity": 1,
  },
  "legend": {
    "padding": "0",
  },
  "ol,
ul,
menu": {
    "listStyle": "none",
    "margin": "0",
    "padding": "0",
  },
  "progress": {
    "verticalAlign": "baseline",
  },
  "small": {
    "fontSize": "80%",
  },
  "sub": {
    "bottom": "-0.25em",
  },
  "sub,
sup": {
    "fontSize": "75%",
    "lineHeight": 0,
    "position": "relative",
    "verticalAlign": "baseline",
  },
  "summary": {
    "display": "list-item",
  },
  "sup": {
    "top": "-0.5em",
  },
  "table": {
    "borderCollapse": "collapse",
    "borderColor": "inherit",
    "textIndent": "0",
  },
  "textarea": {
    "resize": "vertical",
  },
}
`;

exports[`process > default.scss 1`] = `
{
  "*,
::before,
::after": {
    "borderColor": "theme(\\"borderColor.DEFAULT\\", currentColor)",
    "borderStyle": "solid",
    "borderWidth": "0",
    "boxSizing": "border-box",
  },
  ":-moz-focusring": {
    "outline": "auto",
  },
  ":-moz-ui-invalid": {
    "boxShadow": "none",
  },
  "::-webkit-file-upload-button": {
    "WebkitAppearance": "button",
    "font": "inherit",
  },
  "::-webkit-inner-spin-button,
::-webkit-outer-spin-button": {
    "height": "auto",
  },
  "::-webkit-search-decoration": {
    "WebkitAppearance": "none",
  },
  "::before,
::after": {
    "--tw-content": "\\"\\"",
  },
  ":disabled": {
    "cursor": "default",
  },
  "[hidden]": {
    "display": "none",
  },
  "[type=search]": {
    "WebkitAppearance": "textfield",
    "outlineOffset": "-2px",
  },
  "a": {
    "color": "inherit",
    "textDecoration": "inherit",
  },
  "abbr:where([title])": {
    "textDecoration": "underline dotted",
  },
  "b,
strong": {
    "fontWeight": "bolder",
  },
  "blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre": {
    "margin": "0",
  },
  "body": {
    "lineHeight": "inherit",
    "margin": "0",
  },
  "button,
[role=button]": {
    "cursor": "pointer",
  },
  "button,
[type=button],
[type=reset],
[type=submit]": {
    "WebkitAppearance": "button",
    "backgroundColor": "transparent",
    "backgroundImage": "none",
  },
  "button,
input,
optgroup,
select,
textarea": {
    "color": "inherit",
    "fontFamily": "inherit",
    "fontFeatureSettings": "inherit",
    "fontSize": "100%",
    "fontVariationSettings": "inherit",
    "fontWeight": "inherit",
    "lineHeight": "inherit",
    "margin": "0",
    "padding": "0",
  },
  "button,
select": {
    "textTransform": "none",
  },
  "code,
kbd,
samp,
pre": {
    "fontFamily": "theme(\\"fontFamily.mono\\", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace)",
    "fontSize": "1em",
  },
  "dialog": {
    "padding": "0",
  },
  "fieldset": {
    "margin": "0",
    "padding": "0",
  },
  "h1,
h2,
h3,
h4,
h5,
h6": {
    "fontSize": "inherit",
    "fontWeight": "inherit",
  },
  "hr": {
    "borderTopWidth": "1px",
    "color": "inherit",
    "height": "0",
  },
  "html": {
    "MozTabSize": "4",
    "WebkitTextSizeAdjust": "100%",
    "fontFamily": "theme(\\"fontFamily.sans\\", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, \\"Noto Sans\\", sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\", \\"Noto Color Emoji\\")",
    "fontFeatureSettings": "theme(\\"fontFamily.sans[1].fontFeatureSettings\\", normal)",
    "fontVariationSettings": "theme(\\"fontFamily.sans[1].fontVariationSettings\\", normal)",
    "lineHeight": 1.5,
    "tabSize": 4,
  },
  "img,
svg,
video,
canvas,
audio,
iframe,
embed,
object": {
    "display": "block",
    "verticalAlign": "middle",
  },
  "img,
video": {
    "height": "auto",
    "maxWidth": "100%",
  },
  "input::placeholder,
textarea::placeholder": {
    "color": "theme(\\"colors.gray.400\\", #9ca3af)",
    "opacity": 1,
  },
  "legend": {
    "padding": "0",
  },
  "ol,
ul,
menu": {
    "listStyle": "none",
    "margin": "0",
    "padding": "0",
  },
  "progress": {
    "verticalAlign": "baseline",
  },
  "small": {
    "fontSize": "80%",
  },
  "sub": {
    "bottom": "-0.25em",
  },
  "sub,
sup": {
    "fontSize": "75%",
    "lineHeight": 0,
    "position": "relative",
    "verticalAlign": "baseline",
  },
  "summary": {
    "display": "list-item",
  },
  "sup": {
    "top": "-0.5em",
  },
  "table": {
    "borderCollapse": "collapse",
    "borderColor": "inherit",
    "textIndent": "0",
  },
  "textarea": {
    "resize": "vertical",
  },
}
`;
